# scaler

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.spdx  NOTICE  README.md  pyproject.toml  requirements.txt  run_debug.py  run_native_worker_adapter.py  run_worker_adapter_ecs.py  run_worker_adapter_symphony.py
.agent/: plan.md  (+20 more)
scaler/io/ymq/: CMakeLists.txt  _ymq.pyi  bytes.h  common.h  configuration.h  epoll_context.cpp  epoll_context.h  error.h  event_loop.h  event_loop_thread.cpp  event_loop_thread.h  event_manager.h  file_descriptor.h  interruptive_concurrent_queue.h  io_context.cpp  io_context.h  io_socket.cpp  io_socket.h  iocp_context.cpp  iocp_context.h  kqueue_context.cpp  kqueue_context.h  logging.h  message_connection_tcp.cpp  message_connection_tcp.h  network_utils.h  readme.md  simple_interface.cpp  simple_interface.h  tcp_client.cpp  tcp_client.h  tcp_operations.h  tcp_server.cpp  tcp_server.h  timed_queue.h  timestamp.h  typedefs.h  utils.h  ymq.py  ymq.pyi  (+1 more)
scaler/io/ymq/examples/: CMakeLists.txt  automated_echo_client.cpp  common.h  echo_client.cpp  echo_server.cpp  pingpong.cpp  pub_server.cpp  remove_iosocket.cpp  sub_client.cpp  timed_queue.cpp  timestamp.cpp
scaler/io/ymq/pymod_ymq/: async.h  bytes.h  exception.h  gil.h  io_context.h  io_socket.h  message.h  python.h  utils.h  ymq.cpp  ymq.h
scaler/object_storage/: CMakeLists.txt  defs.h  io_helper.cpp  io_helper.h  message.cpp  message.h  mini_redis_server.py  mini_redis_server_process.py  object_manager.cpp  object_manager.h  object_storage_server.cpp  object_storage_server.h  pymod_object_storage_server.cpp
src/cpp/scaler/: CMakeLists.txt
src/cpp/scaler/error/: error.h
src/cpp/scaler/logging/: logging.h
src/cpp/scaler/object_storage/: CMakeLists.txt  constants.h  defs.h  io_helper.cpp  io_helper.h  io_helper_linux.cpp  io_helper_windows.cpp  message.cpp  message.h  object_manager.cpp  object_manager.h  object_storage_server.cpp  object_storage_server.h  pymod_object_storage_server.cpp
src/cpp/scaler/protocol/: CMakeLists.txt
src/cpp/scaler/top/: CMakeLists.txt  main.cpp  scaler_top.cpp  scaler_top.h
src/cpp/scaler/utility/: CMakeLists.txt  indexed_queue.h  many_to_many_dict.h  move_only_function.h  one_to_many_dict.h  stable_priority_queue.h
src/cpp/scaler/uv/: CMakeLists.txt  async.cpp  async.h  error.cpp  error.h  handle.h  loop.cpp  loop.h  signal.cpp  signal.h  timer.cpp  timer.h
src/cpp/scaler/uv_ymq/: CMakeLists.txt  address.cpp  address.h  binder_socket.cpp  binder_socket.h  connector_socket.cpp  connector_socket.h
src/cpp/scaler/ymq/: CMakeLists.txt  address.cpp  address.h  binder_socket.cpp  binder_socket.h  bytes.h  common.h  configuration.h  connector_socket.cpp  connector_socket.h  epoll_context.cpp  epoll_context.h  event_loop.h  event_loop_thread.cpp  event_loop_thread.h  event_manager.h  interruptive_concurrent_queue.h  io_context.cpp  io_context.h  io_socket.cpp  io_socket.h  iocp_context.cpp  iocp_context.h  message.h  message_connection.cpp  message_connection.h  message_connection_tcp.cpp  message_connection_tcp.h  network_utils.h  simple_interface.cpp  simple_interface.h  stream_client.cpp  stream_client.h  stream_server.cpp  stream_server.h  tcp_client.cpp  tcp_client.h  tcp_operations.h  tcp_server.cpp  tcp_server.h  (+3 more)
tests/: CMakeLists.txt  test_async_indexed_queue.py  test_balance.py  test_capabilities.py  test_capability_allocate_policy.py  test_client.py  test_cluster.py  test_cluster_config.py  test_cluster_disconnect.py  test_config.py  test_death_timeout.py  test_future.py  test_graph.py  test_mini_redis_server.py  test_nested_task.py  test_profiling.py  test_protected.py  test_scaling.py  test_serializer.py  test_tagged_allocate_policy.py  test_ui.py  utility.py
tests/client/: test_client.py  test_future.py
tests/cluster/: test_cluster.py  test_cluster_disconnect.py
tests/compat/: test_ray_compat.py
tests/config/: test_config_class.py  test_config_types.py  test_readme_config.py
tests/core/: test_async_indexed_queue.py  test_async_priority_queue.py  test_async_sorted_priority_queue.py  test_death_timeout.py  test_indexed_queue.py  test_profiling.py  test_protected.py
tests/cpp/: CMakeLists.txt
tests/cpp/logging/: CMakeLists.txt  test_logging.cpp
tests/cpp/object_storage/: test_object_storage_server.cpp
tests/cpp/uv/: CMakeLists.txt  test_uv.cpp  test_uv_unix.cpp  test_uv_windows.cpp
tests/cpp/uv_ymq/: test_connector_socket.cpp  test_mitm.cpp  test_sockets.cpp  test_sync.cpp
tests/cpp/wrapper/uv/: CMakeLists.txt  test_pipe.cpp  test_pipe_unix.cpp  test_pipe_windows.cpp  test_tcp.cpp  test_uv.cpp  test_uv_unix.cpp  test_uv_windows.cpp  utility.h
tests/cpp/ymq/: CMakeLists.txt  common.h  test_binder_socket.cpp  test_cc_ymq.cpp  test_connector_socket.cpp  test_mitm.cpp  test_sockets.cpp  test_sync.cpp  test_ymq.cpp  test_ymq_logging.cpp
tests/cpp/ymq/common/: testing.h  utils.cpp  utils.h
tests/cpp/ymq/internal/: CMakeLists.txt  test_accept_server.cpp  test_connect_client.cpp  (+2 more)
tests/entry_points/: test_all.py  test_worker_manager.py
tests/graph/: test_graph.py
tests/io/uv_ymq/: test_sockets.py  test_types.py
tests/io/ymq/: CMakeLists.txt  test_logging.cpp
tests/object_storage/: CMakeLists.txt  test_object_manager.cpp  test_object_storage_server.cpp  test_object_usage.py
tests/pymod_ymq/: test_pymod_ymq.py  test_types.py
tests/scheduler/: test_balance.py  test_capabilities.py  test_capability_allocate_policy.py  test_scaling.py  test_scheduler_config.py  test_waterfall_scaling.py
tests/serializer/: test_serializer.py
tests/task/: test_nested_task.py
tests/ui/: test_capnp_ui_compat.py  test_color_picker.py  test_ui.py
tests/utility/: test_one_to_many_dict.py
tests/worker_manager_adapter/: test_heartbeat_manager.py  test_task_manager.py  test_worker_manager_core.py
tests/worker_manager_adapter/aws_hpc/: aws_hpc_test_harness.py  scaler_aws_hpc_batch.toml
tests/worker_manager_adapter/orb_aws_ec2/: test_orb_provisioner.py  test_worker_manager.py
(+753 files in other folders)
